--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -24,4 +24,27 @@
       </plugin>
     </plugins>
   </build>
+  <properties>
+  <javaee.version>7.0</javaee.version>
+  <spring.version>4.3.6.RELEASE</spring.version>
+  </properties>
+  <dependencies>
+  	<dependency>
+  		<groupId>javax</groupId>
+  		<artifactId>javaee-api</artifactId>
+  		<version>${javaee.version}</version>
+  		<scope>provided</scope>
+  	
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-webmvc</artifactId>
+  		<version>${spring.version}</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>jstl</groupId>
+  		<artifactId>jstl</artifactId>
+  		<version>1.2</version>
+  	</dependency>
+  </dependencies>
 </project>
