--- a/shoppingbackend/pom.xml
+++ b/shoppingbackend/pom.xml
@@ -24,4 +24,24 @@
       </plugin>
     </plugins>
   </build>
+    <properties>
+  <spring.version>4.3.8.RELEASE</spring.version>
+  </properties>
+  <dependencies>
+  <dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-context</artifactId>
+  		<version>${spring.version}</version>
+  	</dependency>
+  </dependencies>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
 </project>
