--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -58,6 +58,12 @@
   		<groupId>org.springframework</groupId>
   		<artifactId>spring-webmvc</artifactId>
   		<version>${spring.version}</version>
+  		<exclusions>
+  		<exclusion>
+  		<groupId>commons-logging</groupId>
+  		<artifactId>commons-logging</artifactId>
+  		</exclusion>
+  		</exclusions>
   	</dependency>
   	<dependency>
   		<groupId>org.springframework</groupId>
@@ -78,12 +84,35 @@
   		<groupId>org.apache.commons</groupId>
   		<artifactId>commons-dbcp2</artifactId>
   		<version>2.1.1</version>
+  		<exclusions>
+  		<exclusion>
+  		<groupId>commons-logging</groupId>
+  		<artifactId>commons-logging</artifactId>
+  		</exclusion>
+  		</exclusions>
   	</dependency>
   	<dependency>
   		<groupId>junit</groupId>
   		<artifactId>junit</artifactId>
   		<version>4.12</version>
   		<scope>test</scope>
+  	</dependency>
+
+  	<dependency>
+  		<groupId>com.google.code.gson</groupId>
+  		<artifactId>gson</artifactId>
+  		<version>2.8.0</version>
+  	</dependency>
+
+  	<dependency>
+  		<groupId>ch.qos.logback</groupId>
+  		<artifactId>logback-classic</artifactId>
+  		<version>1.2.1</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>jcl-over-slf4j</artifactId>
+  		<version>1.7.24</version>
   	</dependency>
   </dependencies>
 </project>
