--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -114,5 +114,20 @@
   		<artifactId>jcl-over-slf4j</artifactId>
   		<version>1.7.24</version>
   	</dependency>
+  	<dependency>
+  		<groupId>javax.validation</groupId>
+  		<artifactId>validation-api</artifactId>
+  		<version>2.0.0.Final</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.hibernate</groupId>
+  		<artifactId>hibernate-validator</artifactId>
+  		<version>6.0.1.Final</version>
+  	</dependency>
+  	<!-- <dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-web</artifactId>
+  		<version>${spring.version}</version>
+  	</dependency> -->
   </dependencies>
 </project>
